--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="btn btn-secondary">clear</button>
     </div>
     <div class="d-flex justify-content-center" id = "foobar">
-        <h6 style = "z-index: 10; left: 100 px;">Made By <a href="https://www.github.com" target="_blank">Sailok Chinta</a></h6>   
+        <h6 style = "z-index: 10; left: 100 px;">Made By <a href="https://github.com/sailok/Paint-App" target="_blank">Sailok Chinta</a></h6>   
     </div>
     <img id="guide" src="guide.png" style="display: none;">
 </body>
